fix(layout): Icons for collapsed trigger

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 :host ::ng-deep .logo {
   height: 32px;
-  background: #333;
-  border-radius: 6px;
+  background: #f7f7f7;
+  border-radius: 2px;
   margin: 16px;
 }
 
